--- a/app/Resources/views/Toppage/index.html.twig
+++ b/app/Resources/views/Toppage/index.html.twig
@@ -1,7 +1,9 @@
 <html>
 <body>
 <div>
-  <h1>クラシックシンフォニー楽団のページヘようこそ！</h1>
+    <h1>クラシックシンフォニー楽団のページヘようこそ！</h1>
+    <h2>お知らせ</h2>
+    <p>{{ infomation }}</p>
 </div>
 </body>
 </html>
