--- a/app/Resources/views/Toppage/index.html.twig
+++ b/app/Resources/views/Toppage/index.html.twig
@@ -5,7 +5,7 @@
     {{ include("Common/information.html.twig") }}
     <p><a href="{{ path("app_concert_index") }}">公演情報はこちら</a></p>
 
-    <div>新着ブログ記事</div>
+    {{ render(controller("AppBundle:Blog:latestList")) }}
 </div>
 </body>
 </html>
