View and edit inquiry detail
P.166-167

--- a/app/Resources/views/Admin/Inquiry/index.html.twig
+++ b/app/Resources/views/Admin/Inquiry/index.html.twig
@@ -21,7 +21,9 @@
         <td></td>
         <td>{{ inquiry.name}}</td>
         <td>{% if inquiry.type == 0%}公演について{% else %}その他{% endif %}</td>
-        <td>詳細</td>
+        <td>
+            <a class="btn btn-default" href="{{ path("app_admininquiryedit_input", {"id": inquiry.id}) }}">詳細</a>
+        </td>
     </tr>
     {% endfor %}
     </tbody>
